# tesis-prevencion-siniestros-transito

./: .gitignore  README.md  dashboard_data.json  deps.txt  pyproject.toml  repo_hits.txt  repo_tree.txt  requirements-notebook.txt  requirements.txt
notebooks/: TPST_local_PySpark_notebook.ipynb  dashboard.html  dashboard_data.json  dashboard_enhanced.html  normalizacion_nb.ipynb  prediction_app.py  prediction_nb.ipynb  prediction_standalone.html  prepare_dashboard_data.py  prevencion_sinisestros_nb.ipynb  serve_dashboard.py  validacion_web.ipynb
notebooks/models/: final_report.txt  quality_checks.json  validation_report.json
notebooks/models/future_predictions_2024_2025/: .part-00000-ff49ba0c-eb8b-4139-a3a3-28143b3e7914-c000.csv.crc
notebooks/models/predictions_best_model/: .part-00000-e11a6203-a238-4d92-b3eb-875b86fec569-c000.csv.crc
notebooks/reports/: data_quality_report.json
scripts/: normalizar_siniestros.py  pivot_wide.py  verify_outputs.py
src/tesis_prevencion_siniestros_transito/: __init__.py  normalize.py
tests/: test_smoke.py
